--- a/config/boards/shields/corne/corne.dtsi
+++ b/config/boards/shields/corne/corne.dtsi
@@ -31,6 +31,7 @@ RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6)  RC(2,7) RC(2,8) RC(2,9
 
 	 kscan0: kscan {
         compatible = "zmk,kscan-gpio-matrix";
+	wakeup-source;
         label = "KSCAN";
 
         diode-direction = "col2row";
